--- a/src/main/java/com/unindra/school/app/view/staff/StaffLoginView.form
+++ b/src/main/java/com/unindra/school/app/view/staff/StaffLoginView.form
@@ -429,6 +429,9 @@
                       <Properties>
                         <Property name="text" type="java.lang.String" value="jButton1"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="registerButtonActionPerformed"/>
+                      </Events>
                       <Constraints>
                         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                           <AbsoluteConstraints x="15" y="710" width="355" height="35"/>
