--- a/src/main/java/com/unindra/school/app/view/staff/StaffDashboardView.form
+++ b/src/main/java/com/unindra/school/app/view/staff/StaffDashboardView.form
@@ -2256,6 +2256,9 @@
               </Constraints>
             </Component>
             <Component class="javax.swing.JButton" name="addDepartmentAddButton">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addDepartmentAddButtonActionPerformed"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="340" y="180" width="160" height="30"/>
